--- a/src/components/Form/form.scss
+++ b/src/components/Form/form.scss
@@ -6,6 +6,7 @@
     box-shadow: $bx-section;
     .form-contact {
         padding: 20px;
+        position: relative;
         .input-item {
             display: flex;
             flex-direction: column;
@@ -55,9 +56,54 @@
             border-radius: 5px;
             cursor: pointer;
         }
+        .aler-form {
+            position: absolute;
+            background: rgb(255 255 255 / 49%);
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            border-bottom-left-radius: 20px;
+            border-bottom-right-radius: 20px;
+            &.is-error {
+                p.alert {
+                    background: #de1010;
+                    box-shadow: 1px 3px 8px rgb(222 17 16 / 68%);
+                }
+            }
+            &.is-success {
+                p.alert {
+                    background: #0c9332;
+                    box-shadow: 0px 2px 9px #0c9332bd;
+                }
+            }
+            p.alert {
+                width: 80%;
+                padding: 50px 0;
+                border-radius: 5px;
+                color: #fff;
+                cursor: pointer;
+                transform: scale(1);
+                opacity: 1;
+                animation: alert .1s reverse
+            }
+        }
     }
 }
 
-
+@keyframes alert {
+    0% {
+        transform: scale(1);
+        opacity: 1;
+    }
+    100% {
+        transform: scale(0);
+        opacity: 0;
+    }
+}
 
     
