--- a/src/index.scss
+++ b/src/index.scss
@@ -120,6 +120,7 @@ body.dark {
           border: 1px solid $bg-body;
           color: $color-dark;
         }
+        .form-contact .aler-form {background: rgb(35 38 53 / 79%)}
       }
     }
     
